add profile, edit posts, delete comments, and other core features
